# Sefa-11-12

./: .gitignore  Dalai Lama  Doku Netzwerkzeug.txt  Gliederung (Rohling).txt  README.md  Sefa - Planung.odt  Themenverteidigung Kriterien  Themenverteidigung Motivation und Methoden.txt  connection backend-frontend-user-scripts.odg  links und c++ tutorials und qt
Kolloquium/: Gliederung.txt  Gliedeung - Struktur(1).txt  Notes.odt  Thesen.txt  ToDo.txt  demo ablauf  ganzgrobevorgehensweise.txt  notizen_koll.odt  thesen.odt
Kolloquium/präsi/: 2leute.uxf  codierung.uxf  src.txt
Literaturstudium/: Dont read me  links, c++- und qt-tutorials
Literaturstudium/Downloads/: Design Your Own Protocol In Five Minutes _ Maya's Programming & Electronics Blog.html
Literaturstudium/Downloads 2/: Qt And Custom Networking Protocols, Or_ The Holy Grail Of The Internet _ Maya's Programming & Electronics Blog.html
Literaturstudium/Downloads 2/Qt And Custom Networking Protocols, Or_ The Holy Grail Of The Internet _ Maya's Programming & Electronics Blog_files/: master.html  saved_resource  saved_resource(1)  saved_resource(7).html  saved_resource(8).html  saved_resource.html
Literaturstudium/Downloads/Design Your Own Protocol In Five Minutes _ Maya's Programming & Electronics Blog_files/: bid  cc414ddfd01f0608e26b22006ab0e5df(1)  master.html  saved_resource(3)  saved_resource(4)  saved_resource(6).html  saved_resource(7).html  saved_resource(9).html  saved_resource.html
Lua/: Main.lua
Lua-Planung/: Anforderungen.txt  Inp - Planung  befehlssatz.txt
MongoLib/: MongoLib.pro  MongoLib.pro.user.c405ccd  datahansz.cpp  datahansz.h  donotreadme.md  mngclient.cpp  mngclient.h  mngmanager.cpp  mngmanager.h  mngserver.cpp  mngserver.h  mngthmanager.cpp  mngthmanager.h  mongoconnection.cpp  mongoconnection.h  mongolib.h  mongolib_global.h
MongoLib/build-debug/: Makefile  Makefile.Debug  Makefile.Release
MongoLib/build-debug/debug/: moc_mngclient.cpp  moc_mngserver.cpp  moc_mngthmanager.cpp  moc_mongoconnection.cpp
Themenverteidigung/: DONT READ ME!  Methoden
Themenverteidigung/Latex/Themenvert/: 20150731-081156-rs2.2B-sthlmBeamerTemplate.aux  20150731-081156-rs2.2B-sthlmBeamerTemplate.nav  20150731-081156-rs2.2B-sthlmBeamerTemplate.out  (+3 more)
arbeit/: Kap2.tex  KapLeo.tex  Konzept Einleitung.txt  Leo - Anwendungsebene.uxf  MAIN.tex  anhang.tex  asciiArt_protocolSpecifier.txt  classDiagFile.uxf  classDiagInstr.uxf  einleitung_entwurf.tex  leo-Konzept.txt  sachertorte.tex  seqDiag.uxf  teilx.tex  zsm.tex  zusammenfassung_entwurf.tex  zusammenfassung_konzept.txt
arbeit/doxygen/: doxygen.config
build-MongoLib-Desktop_Qt_5_10_0_MinGW_32bit-Release/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
build-MongoLib-Desktop_Qt_5_10_0_MinGW_32bit-Release/release/: moc_mngclient.cpp  moc_mngserver.cpp  moc_mngthmanager.cpp
links Themenverteidigung/: und c++ tutorials und qt
project_folder/: CMakeLists.txt  Main.lua  Mongo.pro  Mongo.pro.user.c405ccd  Mongo.pro.user.f99bd7f  build.sh
project_folder/GUI/: CMakeLists.txt  FileTable.cpp  FileTable.h  TerminalInput.cpp  TerminalInput.h  achim.cpp  achim.h  achim.ui  main.cpp  startupwindow.cpp  startupwindow.h  terminal.cpp  terminal.h  terminalinput.cpp  terminalinput.h  terminalw.cpp  terminalw.h
project_folder/MangoApplication/: main.cpp  mainwindow.cpp  mainwindow.h
project_folder/MangoLibrary/: CMakeLists.txt  Mangolib  mangolib.h  mangolib_global.cpp  mangolib_global.h
project_folder/MangoLibrary/files/: filehansz.cpp  filehansz.h  mngfilemanager.cpp  mngfilemanager.h  mngfileserver.cpp  mngfileserver.h  mngrecvfilesocket.cpp  mngrecvfilesocket.h  mngsendfilesocket.cpp  mngsendfilesocket.h
project_folder/MangoLibrary/instructions/: instructionhansz.cpp  instructionhansz.h  mangoconnection.cpp  mangoconnection.h  mngserver.cpp  mngserver.h  mngthmanager.cpp  mngthmanager.h
project_folder/MongoApplication/: CMakeLists.txt  MongoApplication.pro  main.cpp  mainwindow.cpp  mainwindow.h
project_folder/MongoLib/: Doku  MongoLib.pro  datahansz.cpp  datahansz.h  filehansz.cpp  filehansz.h  instructionhansz.cpp  instructionhansz.h  mngfilemanager.cpp  mngfilemanager.h  mngfileserver.cpp  mngfileserver.h  mngserver.cpp  mngserver.h  mngthmanager.cpp  mngthmanager.h  mongoconnection.cpp  mongofilesocket.cpp  mongofilesocket.h  mongolib.h  mongolib_global.cpp  mongolib_global.h
project_folder/MongoLib/files/: filehansz.cpp  filehansz.h  mngfilemanager.cpp  mngfilemanager.h  mngfileserver.cpp  mngfileserver.h  mngfilesocket.cpp  mngfilesocket.h  mngrecvfilesocket.cpp  mngrecvfilesocket.h  mngsendfilesocket.cpp  mngsendfilesocket.h
project_folder/MongoLib/instructions/: instructionhansz.cpp  instructionhansz.h  mngthmanager.cpp  mngthmanager.h
project_folder/MongoLibrary/: CMakeLists.txt  Mongolib  mongolib_global.cpp  mongolib_global.h
project_folder/MongoLibrary/files/: mngfilemanager.cpp  mngfilemanager.h  mngfileserver.h  mngrecvfilesocket.cpp  mngrecvfilesocket.h  mngsendfilesocket.cpp  mngsendfilesocket.h
project_folder/MongoLibrary/instructions/: instructionhansz.cpp  instructionhansz.h  mngthmanager.cpp  mongoconnection.cpp  mongoconnection.h
project_folder/build-Debug/: Makefile
project_folder/build-Debug/MongoApplication/: Makefile  Makefile.Debug  Makefile.Release
project_folder/build-Debug/MongoApplication/debug/: MongoApplication.ilk  moc_mainwindow.cpp
project_folder/build-Debug/MongoLib/: Makefile  Makefile.Debug  Makefile.Release  object_script.MongoLib.Debug  object_script.MongoLib.Release
project_folder/build-Debug/MongoLib/debug/: MongoLib.exp  MongoLib.ilk  moc_mngfilemanager.cpp  moc_mngfileserver.cpp  moc_mngfilesocket.cpp  moc_mngserver.cpp  moc_mngthmanager.cpp  moc_mongoconnection.cpp  moc_mongofilesocket.cpp
project_folder/build-debug/MongoLib/debug/: moc_mngfilesocket.cpp
project_folder/libs/openssl-1.1.0h-win64-mingw/lib/pkgconfig/: libcrypto.pc
zwischenstandsverteidigung/: Zwischenstand.aux  Zwischenstand.nav  Zwischenstand.tex  Zwischenstand.toc  stichpunkte leo.txt  todo
